--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -478,9 +478,9 @@ a {
   margin-right: 20px;
 }
 .flexbox .site-header .header-title {
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 .no-flexbox .site-header .header-title {
   float: left;
